# api/src/epa_api/apis/posts_api.py
@@ -27,8 +27,10 @@ from datetime import datetime
 from pydantic import Field, StrictStr
 from typing import Optional
 from typing_extensions import Annotated
+from epa_api.models.create_post import CreatePost
+from epa_api.models.post import Post
 from epa_api.models.post_list import PostList
-
+from epa_api.security_api import get_token_BearerAuth
 
 router = APIRouter()
 
@@ -52,8 +54,32 @@ async def get_posts(
     name: Annotated[Optional[StrictStr], Field(description="Filter by post title (case-insensitive search).")] = Query(None, description="Filter by post title (case-insensitive search).", alias="name"),
     category_slug: Annotated[Optional[StrictStr], Field(description="Filter by the URL-friendly category identifier (e.g., 'road-hazard').")] = Query(None, description="Filter by the URL-friendly category identifier (e.g., &#39;road-hazard&#39;).", alias="category_slug"),
     since: Annotated[Optional[datetime], Field(description="Return posts created after this ISO 8601 timestamp.")] = Query(None, description="Return posts created after this ISO 8601 timestamp.", alias="since"),
+    token_BearerAuth: TokenModel = Security(
+        get_token_BearerAuth
+    ),
 ) -> PostList:
     """Returns a list of posts. Supports filtering by ID, name, category, or time.  Results are limited to a maximum of 10. """
     if not BasePostsApi.subclasses:
         raise HTTPException(status_code=500, detail="Not implemented")
     return await BasePostsApi.subclasses[0]().get_posts(page_num, post_id, name, category_slug, since)
+
+
+@router.post(
+    "/v1/post",
+    responses={
+        200: {"model": Post, "description": "Successful creation of a post."},
+    },
+    tags=["Posts"],
+    summary="Create a post",
+    response_model_by_alias=True,
+)
+async def create_post(
+    create_post: CreatePost = Body(None, description=""),
+    token_BearerAuth: TokenModel = Security(
+        get_token_BearerAuth
+    ),
+) -> Post:
+    """Creates a post, returning the new post object"""
+    if not BasePostsApi.subclasses:
+        raise HTTPException(status_code=500, detail="Not implemented")
+    return await BasePostsApi.subclasses[0]().create_post(create_post)
