# api/src/epa_api/models/create_post.py
@@ -1,0 +1,94 @@
+# coding: utf-8
+
+"""
+    EPA (Event Posting App) API
+
+    API for a mobile safety application that allows users to post and subscribe to local safety concerns. 
+
+    The version of the OpenAPI document: 1.0.0
+    Generated by OpenAPI Generator (https://openapi-generator.tech)
+
+    Do not edit the class manually.
+"""  # noqa: E501
+
+
+from __future__ import annotations
+import pprint
+import re  # noqa: F401
+import json
+
+
+
+
+from pydantic import BaseModel, ConfigDict, Field, StrictStr
+from typing import Any, ClassVar, Dict, List, Optional
+try:
+    from typing import Self
+except ImportError:
+    from typing_extensions import Self
+
+class CreatePost(BaseModel):
+    """
+    CreatePost
+    """ # noqa: E501
+    title: Optional[StrictStr] = Field(default=None, description="The title of the post.")
+    content: Optional[StrictStr] = Field(default=None, description="The actual content of the post.")
+    category_slug: Optional[StrictStr] = Field(default=None, description="Identifier for the category.")
+    __properties: ClassVar[List[str]] = ["title", "content", "category_slug"]
+
+    model_config = {
+        "populate_by_name": True,
+        "validate_assignment": True,
+        "protected_namespaces": (),
+    }
+
+
+    def to_str(self) -> str:
+        """Returns the string representation of the model using alias"""
+        return pprint.pformat(self.model_dump(by_alias=True))
+
+    def to_json(self) -> str:
+        """Returns the JSON representation of the model using alias"""
+        # TODO: pydantic v2: use .model_dump_json(by_alias=True, exclude_unset=True) instead
+        return json.dumps(self.to_dict())
+
+    @classmethod
+    def from_json(cls, json_str: str) -> Self:
+        """Create an instance of CreatePost from a JSON string"""
+        return cls.from_dict(json.loads(json_str))
+
+    def to_dict(self) -> Dict[str, Any]:
+        """Return the dictionary representation of the model using alias.
+
+        This has the following differences from calling pydantic's
+        `self.model_dump(by_alias=True)`:
+
+        * `None` is only added to the output dict for nullable fields that
+          were set at model initialization. Other fields with value `None`
+          are ignored.
+        """
+        _dict = self.model_dump(
+            by_alias=True,
+            exclude={
+            },
+            exclude_none=True,
+        )
+        return _dict
+
+    @classmethod
+    def from_dict(cls, obj: Dict) -> Self:
+        """Create an instance of CreatePost from a dict"""
+        if obj is None:
+            return None
+
+        if not isinstance(obj, dict):
+            return cls.model_validate(obj)
+
+        _obj = cls.model_validate({
+            "title": obj.get("title"),
+            "content": obj.get("content"),
+            "category_slug": obj.get("category_slug")
+        })
+        return _obj
+
+
